--- a/templates/optimize_route.html
+++ b/templates/optimize_route.html
@@ -90,6 +90,25 @@
             margin-top: 30px;
             color: #333;
         }
+
+        .back-button {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            background-color: #6c757d;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-top: 20px;
+        }
+
+        .back-button:hover {
+            background-color: #5a6268;
+        }
     </style>
 </head>
 <body>
@@ -122,6 +141,9 @@
                     </li>
                 {% endfor %}
             </ul>
+
+            <!-- Back button displayed only if stations exist -->
+            <a href="/histogram.html" class="back-button">Back to Dashboard</a>
         {% endif %}
     </div>
 </body>
